# latent_space_visualisation_app

./: LICENSE  README.md  cvae.ipynb  plotly_test.py  pyproject.toml  test.ipynb
latent_space_visualisation/: app.py  plotting.py  utils.py
mnist_latent_space_exploration/: app.py  get_model.py  utils.py
