[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist_latent_space_exploration"
authors = [
    {name = "Edwin Brown", email = "w.edwin.brown@outlook.com"},
]
description = "Package for visualising models latent space"
readme = "README.md"
version = '0.0.1'
requires-python = ">=3.8.0"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ['mnist_latent_space_exploration']

[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}